2006-10-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalCalendarsListView.m: new component class that
	wrap a selector the the "Calendars" tab.

	* UI/Contacts/UIxContactsCalendarsSelection.m: buttons for the
	new user calendar selector.

2006-10-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/SchedulerUI/UIxAppointmentEditor.wox: time ranges
	may cover hour 0 to hour 23.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-iCalStringFromQueryParameter:format:]): dates explicitly set to
	utc tz.

	* UI/WebServerResources/SchedulerUI.js: manage both lists of
	objects wrt to the toolbar actions.

	* UI/WebServerResources/generic.js: added code to the "String"
	class to decode number-encoded char entities.

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-batchDeleteAction]): new method to delete selected entries in the
	lists.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -deleteEntriesWithIds:ids]): new method
	that delete identified entries in batch.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent
	-jsCloseWithRefreshMethod:methodName]): new method with explicit purpose.

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -saveAction]),
	UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-saveAction]), UI/MailerUI/UIxMailEditor.m ([UIxMailEditor
	-sendAction]), UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-saveAction]):
	return a UIxJSClose component if everything went fine.

	* UI/Scheduler/UIxTaskEditor.h: interface extracted from
	UIxTaskEditor.m.

	* UI/Scheduler/UIxAppointmentEditor.h: interface extracted from
	UIxAppointmentEditor.m.

	* UI/Common/UIxJSClose.[hm]: new UIxComponent designed to display
	a very light page with javascript code to close a window, by
	calling a method on the opener if specified. This component is
	designed to work as a response to form postings.

2006-10-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
