@@ -1,5 +1,10 @@
 2006-10-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/Contacts/UIxContactSelector.m ([UIxContactSelector -setCheckedBoxes:boxes]) 
+	([UIxContactSelector -setHasCheckBoxes:aBool]) 
+	([UIxContactSelector -isCheckBoxChecked]): new accessors method to
+	permit the drawing of checkboxes instead of card icons.
+
 	* UI/Scheduler/UIxCalCalendarsListView.m: new component class that
 	wrap a selector the the "Calendars" tab.
 
